korjaaluja Nikon lähteisiin yms. tauhakaa.

--- a/main.tex
+++ b/main.tex
@@ -84,6 +84,7 @@
 
 %%%%% Your commands.
 \usepackage{datetime} % vain versionumerointia varten, voi poistaa ennen lopullista
+\usepackage{multirow}
 %%%%% Glossary information.
 
 \loadglsentries[main]{tex/sanasto.tex}
