--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -248,3 +248,10 @@ url         = {http://publikasjoner.nve.no/rapport/2018/rapport2018_70.pdf},
 urldate     = {2020-09-13},
 type        = {raportti}
 }
+
+@thesis{Manner,
+title  = {Lämpöpumppujärjestelmien sähköasennukset},
+author = {Markku Manner},
+year   = {20170},
+school = {Metropolia Ammattikorkeakoulu}
+}
