--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -88,19 +88,19 @@
   	urldate={2020-03-24}
 }
 @misc{SSFactSheet,
-  author       = {SunSpec Alliance},
+  organization = {SunSpec Alliance},
   title        = {SunSpec Modbus Interface fact sheet},
   url          = {http://sunspec.org/wp-content/uploads/2019/09/SunSpec-Modbus-FactSheet-RevA-2019-07-web.pdf},
   urldate      = {2020-08-13}
 }
 @misc{SSESModels,
-  author       = {SunSpec Alliance},
+  organization = {SunSpec Alliance},
   title        = {SunSpec Energy Storage Models - SunSpec Alliance Interoperability Specification},
   url          = {http://sunspec.org/wp-content/uploads/2019/08/SunSpec-Alliance-Specification-Energy-Storage-ModelsD4rev0.pdf},
   urldate      = {2020-08-13}
 }
 @misc{SSTech,
-  author       = {SunSpec Alliance},
+  organization = {SunSpec Alliance},
   title        = {SunSpec	Technology	Overview - Spec	Alliance	Interoperability	Specification},
   url          = {http://sunspec.org/wp-content/uploads/2019/09/SunSpec-Techonology-Overview-12040.pdf},
   urldate      = {2020-08-13}
@@ -187,7 +187,7 @@
 }
 
 @misc{DNP3Study,
-	author       = {T&D World},
+	organization = {T\&D World},
 	title        = {Research Study: North American Utilities Use DNP3 for SCADA},
 	url          = {https://www.tdworld.com/test-and-measurement/article/20972407/research-study-north-american-utilities-use-dnp3-for-scada},
 	date         = {2019-03-30},
@@ -195,7 +195,7 @@
 }
 
 @misc{HAN,
-	author       = {Aidon Ltd.},
+	organization = {Aidon Ltd.},
 	title        = {Aidon HAN Interface Description},
 	url          = {https://www.nek.no/wp-content/uploads/2018/11/Aidon-HAN-Interface-Description-v10A-ID-34331.pdf},
 	date         = {2018-11-08},
@@ -203,7 +203,7 @@
 }
 
 @misc{Aidon5510,
-	author       = {Aidon Ltd.},
+	organization = {Aidon Ltd.},
 	title        = {Aidon 5510 Fact Sheet},
 	url          = {https://www.jonkopingenergi.se/storage/ma/049ce02769574250bb3862b0f091fdfd/d2b4b7cbb1db489189794a72a44ab4c3/pdf/FE164C6A4E7CA65C23AAFAC594268D9365CDE053/Factsheet_Meter_5510_EN_21.06.2012%20(ID%203028).pdf},
 	date         = {2012-06-21},
