--- a/tex/yhteenveto.tex
+++ b/tex/yhteenveto.tex
@@ -1,12 +1,12 @@
-Lämpöpumppujen ja aurinkosähköjärjestelmien merkitys sähköverkossa kasvaa niiden suosion kasvaessa. Lämpöpumput korvaavat muita lämmitys- ja viilennysmuotoja ja aurinkosähköjärjestelmillä haetaan kotitalouksissa omavaraisuutta ja ylipäätään säästöjä sähkölaskussa. 
+Lämpöpumppujen ja aurinkosähköjärjestelmien merkitys sähköverkossa kasvaa niiden suosion kasvaessa. Lämpöpumput korvaavat muita lämmitys- ja viilennysmuotoja ja aurinkosähköjärjestelmillä haetaan kotitalouksissa omavaraisuutta ja ylipäätään säästöjä sähkölaskussa.
 
-Aurinkosähköjärjestelmien määrän kasvu lisää sähköverkon tuotannon ailahtelevuutta ja säätövoiman tarvetta, sillä tuotanto vaihtelee tunneittain. Tuotantoa voidaan ennustaa sääennusteen pohjalta, mutta yksittäiset pilvet voivat aiheuttaa aluellisesti nopeitakin tehovaihteluita. Lisäksi huipputeho sijoittuu päiväsaikaan, joten ihmisten palatessa töistä ja kulutuksen kasvaessa tuotannon laskiessa samanaikaisesti säätötehon tarve kasvaa entisestään. 
+Aurinkosähköjärjestelmien määrän kasvu lisää sähköverkon tuotannon ailahtelevuutta ja säätövoiman tarvetta, sillä tuotanto vaihtelee tunneittain. Tuotantoa voidaan ennustaa sääennusteen pohjalta, mutta yksittäiset pilvet voivat aiheuttaa aluellisesti nopeitakin tehovaihteluita. Lisäksi huipputeho sijoittuu päiväsaikaan, joten ihmisten palatessa töistä ja kulutuksen kasvaessa tuotannon laskiessa samanaikaisesti säätötehon tarve kasvaa entisestään.
 
 Lämpöpumppujen lisääntyminen ja esimerikiksi suorasta sähkölämmityksestä eroava käyttäytyminen vaikuttavat sähköverkkoon. Lämpöpumppujen tekniikka kehittyy ja nykyisin kotitalouskäyttöön myytävissä pumpuissa on yleensä suoraan verkkoon kytketyn oikosulkumoottorin tilalla taajuusmuuttajakäyttöinen oikosulkumoottori. Tämä kehitys myös osaltaan määrittelee miten verkkoon liitettyjen lämpöpumppujen määrän kasvu vaikuttaa sähköverkkoon. Ilman taajuusmuuttajaa tai pehmokäynnistintä verkkoon kytketyt lämpöpumput ottavat käynnistyessään verkosta suuria hetkellisiä tehoja, mikä saattaa jännitejäykkyydeltään huonossa verkossa aiheuttaa hetkellisiä jännitteenalenemia. Lämpöpumpun ollessa taajuusmuuttajakäyttöinen, ei se aiheuta edellämainittuja tehonkulutuksen piikkejä. Kuitenkin mikäli lämpöpumpulla korvataan jokin muu lämmitysmuoto, kuin suora sähkölämmitys, kasvattaa se kulutuspaikan energiankulutusta. Mikäli muuntopiirissä moni talous vaihtaa lämmitysmuodokseen lämpöpumpun, saattaa se aiheuttaa tarpeen sähköverkon jännitejäykkyyden parantamiselle.
 
-Järjestelmien tuomia haasteita voidaan ratkaista ja löytää uusia järjestelmiä hyödyntäviä sovelluksia, kun kommunikaatio niiden kanssa mahdollista. Kommunikointi mahdollistetaan standardoiduilla kommunikaatiorajapinnoilla, joiden kautta järjestelmiä voidaan ohjata. Tällöin ne voidaan kytkeä esimerkiksi kiinteistöautomaatioon tai muuhun ulkoiseen ohjaukseen. Valmistajien suljetut pilvipalvelut muodostavat myös erään rajapinnan kommunikaatiolle, joihin pääsy on usein vain valmistajalla ja järjestelmän omistajalla. 
+Järjestelmien tuomia haasteita voidaan ratkaista ja löytää uusia järjestelmiä hyödyntäviä sovelluksia, kun kommunikaatio niiden kanssa mahdollista. Kommunikointi mahdollistetaan standardoiduilla kommunikaatiorajapinnoilla, joiden kautta järjestelmiä voidaan ohjata. Tällöin ne voidaan kytkeä esimerkiksi kiinteistöautomaatioon tai muuhun ulkoiseen ohjaukseen. Valmistajien suljetut pilvipalvelut muodostavat myös erään rajapinnan kommunikaatiolle, joihin pääsy on usein vain valmistajalla ja järjestelmän omistajalla.
 
-Yksi suosituimmista järjestelmien ohjauksen mahdollistavista tekniikoista on Modbus-standardi. Standardi määrittelee fyysisen tason rajapinnat mahdolistaen ohjauksen joko sarjaliitäntää tai ethernet-liitäntää käyttäen, mikä mahdollistaa protokollan käyttämisen paikallisesti tai internetin yli toimivien etäyhteyksien välityksellä. Modbus-standardin määritellessä kommunikointia vain hyvin matalalla tasolla on sitä helppo soveltaa erilaisiin sovelluksiin ja sen päälle voidaan rakentaa korkeamman tason viestintä- ja ohjausprotokollia. Modbusin päälle voidaan myöskin toteuttaa yksittäisen laitteen ohjaukseen ja monitorointiin tarvittavat sovellukset tai liittäminen kotiautomaatioon osaksi älykästä kotia. 
+Yksi suosituimmista järjestelmien ohjauksen mahdollistavista tekniikoista on Modbus. Modbus-standardi määrittelee fyysisen tason rajapinnat mahdolistaen ohjauksen joko sarja- tai ethernet-liitäntää käyttäen, mikä mahdollistaa protokollan käyttämisen paikallisesti tai internetin yli toimivien etäyhteyksien välityksellä. Modbus-standardin määritellessä kommunikointia vain hyvin matalalla tasolla on sitä helppo soveltaa erilaisiin sovelluksiin ja sen päälle voidaan rakentaa korkeamman tason viestintä- ja ohjausprotokollia. Modbusin päälle voidaan myöskin toteuttaa yksittäisen laitteen ohjaukseen ja monitorointiin tarvittavat sovellukset tai liittäminen kotiautomaatioon osaksi älykästä kotia. 
 
 Aurinkosähköjärjestelmien ja energiavarastojen osalta työssä tarkasteltiin muutamia eri rajapintoja, joista tärkein on SunSpec Modbus. Se pohjautuu Modbus-standardiin, ja sen avulla voidaan ohjata energiavarastojen ja aurinkoinverttereiden toimintaa, esimerkiksi rajoittaa tehoa tai säätää loistehontuotantoa. Suurin käyttö tällä rajapinnalla on paikallisessa automaatiossa, esimerkiksi tuotantotietojen käyttö kuormanohjaukseen.
 
@@ -14,7 +14,7 @@ Lämpöpumppujen kohdalla korkeamman tason rajapintoja kuten SG-Ready-ohjausraja
 
 Työssä tarkasteltiin kuutta eri sidosryhmää, joista Fingrid on sidoksissa vain aurinkosähköjärjestelmiin. Muut sidosryhmät hyödyntävät eri kommunikaatiorajapintoja eri tarkoituksiin, joista osalle niiden käyttö voi olla myös yrityksen ydinliiketoimintaa.
 
-Rajapinnat mahdollistavat useita sovelluksia, mutta kaikki käsitellyt sovellukset eivät vielä ole yleistyneet Suomessa. Etämonitorointi ja -hallinta on ollut jo pidempään käytössä pilvipalveluiden muodossa, ja kiinteistöautomaatio yleistyy kotitalouksissa energiansäästötarkoituksessa. 
+Rajapinnat mahdollistavat useita sovelluksia, mutta kaikki käsitellyt sovellukset eivät vielä ole yleistyneet Suomessa. Etämonitorointi ja -hallinta on ollut jo pidempään käytössä pilvipalveluiden muodossa, ja kiinteistöautomaatio yleistyy kotitalouksissa energiansäästötarkoituksessa.
 
 Kysyntäjousto on vasta yleistymässä Suomessa, sillä aggregaattoreita ei Suomessa oikeastaan ole. Itsenäisen aggregaattorin laajennettu pilotti käynnistyi 21.7.2020, ja siinä testataan aiemmin kokeiltujen ratkaisujen skaalautuvuutta. Fingrid on ajamassa tätä kaikille säätösähkömarkkinoille avointa pilottia eteenpäin.
 
