--- a/tauthesis.cls
+++ b/tauthesis.cls
@@ -136,7 +136,7 @@
 \RequirePackage{csquotes}
 
 % Powerful color package
-\RequirePackage[table]{xcolor}
+\RequirePackage[table,xcdraw]{xcolor}
 \definecolor{taupurple}{RGB}{78,0,148}
 
 % Date and time handling
